@@ -7,6 +7,7 @@ Changelog
  * Added StreamField, a model field for freeform page content
  * Added Wagtail API, a module for creating a RESTful API for your content
  * MySQL support
+ * Django 1.8 support
  * Javascript includes in the admin backend have been moved to the HTML header, to accommodate form widgets that render inline scripts that depend on libraries such as jQuery
  * Improvements to the layout of the admin menu footer.
  * Menu items of custom apps are now highlighted when being used (Josh Barr)
